<resources>
    <string name="app_name">Never Be Late Again</string>

    <string name="title_fragment_todays_meetings">Today\'s Meetings</string>
    <string name="title_fragment_future_meetings">Future Meetings</string>
    <string name="title_fragment_friends">Friends</string>
    <string name="fragments_loading_data">Loading data...</string>

    <string name="action_create_meeting">Create a meeting</string>
    <string name="action_edit_friends">Edit Friends</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <string name="title_activity_parse_login">Login</string>
    <string name="login_button_label">Log In</string>
    <string name="login_signup_text">Don\'t have an account ?\nSign Up, right now.</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_empty_fields_dialog_message">Some of the fields are empty.</string>
    <string name="login_error_dialog_title">Login Error</string>

    <string name="title_activity_parse_sign_up">Sign Up</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_first_name_hint">First Name</string>
    <string name="signup_last_name_hint">Last Name</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_verify_password_hint">Verify password</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="signup_error_dialog_title">Sign Up Error</string>
    <string name="signup_emty_fields_dialog_message">Some of the fields are empty.</string>
    <string name="signup_confirmed_password_error_dialog_message">Confirmed password doesn\'t match to password.</string>

    <string name="title_activity_edit_friends">Choose Your Friends</string>
    <string name="loading_data_error_title">Loading Data Error</string>
    <string name="friend_list_updating_error_title">Friends List Updating Error</string>
    <string name="friend_list_updated_toast">Friend List Updated.</string>
    <string name="title_activity_create_meeting">Create a Meeting</string>

    <string name="hello_world">Hello world!</string>
    <string name="new_meeting_created_toast">A new meeting was created</string>
    <string name="meeting_creating_error_title">Meeting creation error</string>
    <string name="title_activity_choose_invitees">Choose Invitees</string>
    <string name="title_activity_start">Loading Data</string>
    <string name="start_addvertising">Here could be your advertising.</string>
    <string name="start_loading_data">Loading Data</string>

    <string name="create_meeting_subject_empty">Subject field is empty.</string>
    <string name="create_meeting_date_empty">Date field is empty.</string>
    <string name="create_meeting_time_empty">Time field is empty.</string>
    <string name="create_meeting_location_empty">Location field is empty.</string>
    <string name="create_meeting_date_time_wrong">Chosen date/time is wrong.</string>
    <string name="fragment_todays_no_meetings">No meetings today.</string>
    <string name="fragment_future_no_meetings">No meetings.</string>
    <string name="title_activity_meeting">Meeting</string>
    <string name="user_status_going">Going</string>
    <string name="user_status_invited">Invited</string>
    <string name="user_status_not_going">Not Going</string>
    <string name="user_status_maybe">Maybe</string>
    <string name="blank_text_view">...</string>
    <string name="meeting_subject_label">Meeting Subject</string>
    <string name="meeting_details_label">Details</string>
    <string name="meeting_date_label">Begins at</string>
    <string name="meeting_remain_label">Starts in</string>
    <string name="meeting_location_label">Meeting Location</string>
    <string name="meeting_invitees_label">Invitees</string>
    <string name="meeting_user_status_label">Your intention</string>

    <array name="meeting_user_status">
        <item>Going</item>
        <item>Not Going</item>
        <item>Maybe</item>
    </array>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="reset_password_label">We would sent the reset link to email below.</string>
    <string name="reset_password_button_label">Reset Password</string>
    <string name="reset_instruction_toast">An email was successfully sent with reset instructions.</string>
    <string name="reset_password_error_title">Reset Password Error</string>
    <string name="forgot_password_link">Forfot yout password? Press here.</string>
    <string name="fragment_friends_empty">It\'s time to add new friends.</string>

</resources>
