<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.alpha.android.donotbelateapp.ui.ParseSignUpActivity"
                style="@style/niceBackground">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_email"
        android:inputType="textEmailAddress"
        android:hint="@string/signup_email_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_first_name"
        android:layout_below="@+id/signup_email"
        android:layout_alignParentStart="true"
        android:hint="@string/signup_first_name_hint"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_last_name"
        android:hint="@string/signup_last_name_hint"
        android:layout_below="@+id/signup_first_name"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_password"
        android:inputType="textPassword"
        android:hint="@string/signup_password_hint"
        android:layout_below="@+id/signup_last_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_confirm_password"
        android:inputType="textPassword"
        android:hint="@string/signup_verify_password_hint"
        android:layout_below="@+id/signup_password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_button_label"
        android:id="@+id/signup_button"
        android:layout_below="@+id/signup_confirm_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_spinner"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
