<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.android.donotbelateapp.ui.ParseLoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/login_email_hint"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loggin_password"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label"
        android:id="@+id/logiin_button"
        android:layout_below="@+id/loggin_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_signup_text"
        android:id="@+id/login_signup_link"
        android:layout_below="@+id/logiin_button"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="16sp"/>
</RelativeLayout>
