<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.alpha.android.donotbelateapp.ResetPasswordActivity"
                style="@style/niceBackground">

    <TextView
        android:text="@string/reset_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetPasswordLabel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resetPasswordEmail"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/login_email_hint"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_button_label"
        android:id="@+id/resetPasswordSubmitButton"
        android:layout_below="@+id/resetPasswordEmail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
